--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<h1>全体タイムライン</h1>
+<%  @articles.each do |article| %>
+  <li>
+    <%= article.content %>
+  </li>
+<% end %>
