--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -1,7 +1,9 @@
-%h1 New Article
-= form_with model: @article do |form|
-  = form.label :content
-  = form.text_area :content, size: "50x3", maxlength: "140"
-  - @article.errors.full_messages_for(:content).each do | message |
-    = message
-  = form.submit
+%div{:class => "container"}
+  %h1{:class => "display-4"}New Article
+  = form_with model: @article do |form|
+    %div{:class => "form-group"}
+      = form.label :content
+      = form.text_area :content, maxlength: "140", class: "form-control"
+      - @article.errors.full_messages_for(:content).each do | message |
+        = message
+    = form.submit "Regist", class: "btn btn-primary"
