--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -1,5 +1,5 @@
 %div{:class => "container"}
-  %h1{:class => "display-4"}New Article
+  %h1{:class => "display-4 text-monospace"}New Article
   = form_with model: @article do |form|
     %div{:class => "form-group"}
       = form.label :content
