--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,15 +1,15 @@
 %div{:class => "container"}
-  %h1{:class => "display-4"}Time Line
+  %h1{:class => "display-4 text-monospace"}Time Line
   %input{:type => "button", 
               :class => "btn btn-primary btn-sm", 
               :onclick => "location.href='/articles/new'", 
-              :value => "Add" }
+              :value => "Regist" }
   - @articles.each do |article|
     %div{:class => "row"}
-      %div{:class => "col "}
+      %div{:class => "col text-monospace"}
         %span{:style => "color:Dodgerblue"}
           %i{:class => "far fa-comment-dots"}
         = l article.created_at, format: :short
     %div{:class => "row"}
-      %div{:class => "col ml-5 border-left border-primary"}
+      %div{:class => "col ml-5 border-left border-primary text-break text-monospace"}
         = article.content
