--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,8 +10,25 @@
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    %p.notice
-      = notice
-    %p.alert
-      = alert
-    = yield
+    %header.navbar.navbar-expand-sm.navbar-light.bg-light
+      .container
+        = link_to "MiniBlog", root_path, class: "navbar-brand"
+        %ui.navbar-nav
+          %li.nav-item
+            = link_to "Create Article", new_article_path, class: "nav-link"
+          - if user_signed_in?
+            %li.nav-item
+              = link_to "Retirement", cancel_user_registration_path, class: "nav-link"
+            %li.nav-item
+              = link_to "Logout", destroy_user_session_path, class: "nav-link", method: :delete
+          - else
+            %li.nav-item
+              = link_to "Login", new_user_session_path, class: "nav-link"
+    .container
+      - if flash.notice
+        .alert.alert-success
+          = flash.notice
+      - if flash.alert
+        .alert.alert-success
+          = flash.alert
+      = yield
