--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,16 +14,16 @@
       .container
         = link_to "MiniBlog", root_path, class: "navbar-brand"
         %ui.navbar-nav
-          %li.nav-item
-            = link_to "Create Article", new_article_path, class: "nav-link"
           - if user_signed_in?
             %li.nav-item
-              = link_to "Retirement", cancel_user_registration_path, class: "nav-link"
+              = link_to "Create Article", new_article_path, class: "nav-link"
             %li.nav-item
-              = link_to "Logout", destroy_user_session_path, class: "nav-link", method: :delete
+              = link_to "Edit User", edit_user_registration_path, class: "nav-link"
+            %li.nav-item
+              = link_to "Log out", destroy_user_session_path, class: "nav-link", method: :delete
           - else
             %li.nav-item
-              = link_to "Login", new_user_session_path, class: "nav-link"
+              = link_to "Log in", new_user_session_path, class: "nav-link"
     .container
       - if flash.notice
         .alert.alert-success
