--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,28 +1,25 @@
 %h2 Sign up
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = render "users/shared/error_messages", resource: resource
-  .field
+  .form-group
     = f.label :name
-    %br/
-    = f.text_field :name, autofocus: true, autocomplete: "name"
-  .field
+    = f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control"
+  .form-group
     = f.label :password
     - if @minimum_password_length
       %em
         (#{@minimum_password_length} characters minimum)
     %br/
-    = f.password_field :password, autocomplete: "new-password"
-  .field
+    = f.password_field :password, autocomplete: "new-password", class: "form-control"
+  .form-group
     = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .field
+    = f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control"
+  .form-group
     = f.label :profile
     = f.text_area :profile, class: "form-control", row: 10
-  .field
+  .form-group
     = f.label :blog_url
-    %br/
-    = f.text_field :blog_url
-  .actions
-    = f.submit "Sign up"
+    = f.text_field :blog_url, class: "form-control"
+  .form-group
+    = f.submit "Sign up", class: "btn btn-primary"
 = render "users/shared/links"
