--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -2,41 +2,35 @@
   Edit #{resource_name.to_s.humanize}
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = render "users/shared/error_messages", resource: resource
-  .field
+  .form-group
     = f.label :name
-    %br/
-    = f.text_field :name, autofocus: true, autocomplete: "name"
+    = f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control"
   - if devise_mapping.confirmable? && resource.pending_reconfirmation?
     %div
       Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
+  .form-group
     = f.label :password
     %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
     - if @minimum_password_length
-      %br/
       %em
         = @minimum_password_length
         characters minimum
-  .field
+    = f.password_field :password, autocomplete: "new-password", class: "form-control"
+  .form-group
     = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .field
+    = f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control"
+  .form-group
     = f.label :current_password
     %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "current-password"
-  .field
+    = f.password_field :current_password, autocomplete: "current-password", class: "form-control"
+  .form-group
     = f.label :profile
     = f.text_area :profile, class: "form-control", row: 10
-  .field
+  .form-group
     = f.label :blog_url
-    %br/
-    = f.text_field :blog_url
+    = f.text_field :blog_url, class: "form-control"
   .actions
-    = f.submit "Update"
+    = f.submit "Update", class: "btn btn-primary"
 %h3 Cancel my account
 %p
   Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
