--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -5,9 +5,6 @@
   .form-group
     = f.label :name
     = f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control"
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
   .form-group
     = f.label :password
     %i (leave blank if you don't want to change it)
@@ -29,6 +26,6 @@
   .form-group
     = f.label :blog_url
     = f.text_field :blog_url, class: "form-control"
-  .actions
-    = f.submit "Update", class: "btn btn-primary"
-= link_to "Back", :back
+  .form-group
+    = f.submit "Update", class: "btn btn-primary btn-sm"
+    = link_to "Back", :back, class:"btn btn-secondary btn-sm"
