--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -21,5 +21,5 @@
     = f.label :blog_url
     = f.text_field :blog_url, class: "form-control"
   .form-group
-    = f.submit "Sign up", class: "btn btn-primary"
+    = f.submit "Sign up", class: "btn btn-primary btn-sm"
 = render "users/shared/links"
