--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -4,7 +4,7 @@
   = render "users/shared/error_messages", resource: resource
   .form-group
     = f.label :name
-    = f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control"
+    = f.text_field :name, class: "form-control"
   .form-group
     = f.label :password
     %i (leave blank if you don't want to change it)
@@ -12,14 +12,14 @@
       %em
         = @minimum_password_length
         characters minimum
-    = f.password_field :password, autocomplete: "new-password", class: "form-control"
+    = f.password_field :password, class: "form-control"
   .form-group
     = f.label :password_confirmation
-    = f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control"
+    = f.password_field :password_confirmation, class: "form-control"
   .form-group
     = f.label :current_password
     %i (we need your current password to confirm your changes)
-    = f.password_field :current_password, autocomplete: "current-password", class: "form-control"
+    = f.password_field :current_password, class: "form-control"
   .form-group
     = f.label :profile
     = f.text_area :profile, class: "form-control", row: 10
