--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -3,17 +3,17 @@
   = render "users/shared/error_messages", resource: resource
   .form-group
     = f.label :name
-    = f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control"
+    = f.text_field :name, class: "form-control"
   .form-group
     = f.label :password
     - if @minimum_password_length
       %em
         (#{@minimum_password_length} characters minimum)
     %br/
-    = f.password_field :password, autocomplete: "new-password", class: "form-control"
+    = f.password_field :password, class: "form-control"
   .form-group
     = f.label :password_confirmation
-    = f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control"
+    = f.password_field :password_confirmation, class: "form-control"
   .form-group
     = f.label :profile
     = f.text_area :profile, class: "form-control", row: 10
