--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -3,8 +3,8 @@
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = render "users/shared/error_messages", resource: resource
   .form-group
-    = f.label :name
-    = f.text_field :name, class: "form-control"
+    = f.label :username
+    = f.text_field :username, class: "form-control"
   .form-group
     = f.label :password
     %i (leave blank if you don't want to change it)
@@ -17,15 +17,15 @@
     = f.label :password_confirmation
     = f.password_field :password_confirmation, class: "form-control"
   .form-group
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    = f.password_field :current_password, class: "form-control"
-  .form-group
     = f.label :profile
     = f.text_area :profile, class: "form-control", row: 10
   .form-group
     = f.label :blog_url
     = f.text_field :blog_url, class: "form-control"
+  .form-group
+    = f.label :current_password
+    %i (we need your current password to confirm your changes)
+    = f.password_field :current_password, class: "form-control"
   .form-group
     = f.submit "Update", class: "btn btn-primary btn-sm"
     = link_to "Back", :back, class:"btn btn-secondary btn-sm"
