--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -2,8 +2,8 @@
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = render "users/shared/error_messages", resource: resource
   .form-group
-    = f.label :name
-    = f.text_field :name, class: "form-control"
+    = f.label :username
+    = f.text_field :username, class: "form-control"
   .form-group
     = f.label :password
     - if @minimum_password_length
