--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -1,13 +1,10 @@
-%div{:class => "container"}
-  %h1{:class => "display-4 text-monospace"}New Article
-  = form_with model: @article do |form|
-    %div{:class => "form-group"}
-      = form.label :content
-      = form.text_area :content, maxlength: "140", class: "form-control"
-      - @article.errors.full_messages_for(:content).each do | message |
-        = message
-    = form.submit "Regist", class: "btn btn-primary btn-sm"
-    %input{:type => "button", 
-                :class => "btn btn-secondary btn-sm", 
-                :onclick => "location.href='/articles'", 
-                :value => "Return" }
+%h1.mt-2 New Article
+
+= form_with(model: @article, class: "form-horizontal") do |f|
+  #errors
+  .form-group
+    = f.label :content
+    = f.text_area :content, maxlength: "140", class: "form-control"
+  .form-group
+    = f.submit "Regist", class: "btn btn-primary btn-sm"
+    = link_to "Back", :back, class:"btn btn-secondary btn-sm"
