--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -28,4 +28,4 @@
     = f.password_field :current_password, class: "form-control"
   .form-group
     = f.submit "Update", class: "btn btn-primary btn-sm"
-    = link_to "Back", :back, class:"btn btn-secondary btn-sm"
+    = link_to "Back", root_path, class:"btn btn-secondary btn-sm"
