--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -7,4 +7,4 @@
     = f.text_area :content, maxlength: "140", class: "form-control"
   .form-group
     = f.submit "Regist", class: "btn btn-primary btn-sm"
-    = link_to "Back", :back, class:"btn btn-secondary btn-sm"
+    = link_to "Back", root_path, class:"btn btn-secondary btn-sm"
