--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -6,6 +6,9 @@
         %i.far.fa-comment-dots
       = l article.created_at, format: :short
       = link_to article.user.username, user_path(id: article.user.id)
+      - if user_signed_in?
+        - if article.user.id != current_user.id
+          = link_to "フォローする", user_relationships_path(article.user.id), method: :post
   .row
     .col.ml-5.border-left.border-primary.text-break.text-monospace
       = article.content
