--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,9 @@
         %ui.navbar-nav
           - if user_signed_in?
             %li.nav-item
-              = link_to "following Articles", articles_following_path, class: "nav-link"
+              = link_to "All User Articles", root_path, class: "nav-link"
+            %li.nav-item
+              = link_to "Following User Articles", articles_following_path, class: "nav-link"
             %li.nav-item
               = link_to "Create Article", new_article_path, class: "nav-link"
             %li.nav-item
