--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -12,6 +12,9 @@
   .col-4
     - if user_signed_in? && current_user != @user
       - unless current_user.following.include?(@user)
-        = link_to "フォローする", user_relationships_path(@user), method: :post
+        = form_with(model: current_user.active_relationships.build, method: :post) do |f|
+          = hidden_field_tag :followed_id, @user.id
+          = f.submit "フォローする", class: "btn btn-primary btn-sm"        
       - else
-        = link_to "フォロー解除する", user_relationships_path(current_user, @user), method: :delete
+        = form_with(model: current_user.active_relationships.find_by(followed_id: @user.id), method: :delete) do |f|
+          = f.submit "フォロー解除", class: "btn btn-primary btn-sm"
