--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -12,7 +12,7 @@
   .col-4
     - if user_signed_in? && current_user != @user
       - unless current_user.following.include?(@user)
-        = form_with(model: current_user.active_relationships.build, method: :post) do |f|
+        = form_with(model: current_user.active_relationships.build) do |f|
           = hidden_field_tag :followed_id, @user.id
           = f.submit "フォローする", class: "btn btn-primary btn-sm"        
       - else
