--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -1,10 +1,10 @@
-%h2 New Article
-
+%h5 
+  = t(:create_article)
 = form_with(model: @article, class: "form-horizontal") do |f|
   #errors
   .form-group
     = f.label :content
     = f.text_area :content, maxlength: "140", class: "form-control"
   .form-group
-    = f.submit "Regist", class: "btn btn-primary btn-sm"
-    = link_to "Back", root_path, class:"btn btn-secondary btn-sm"
+    = f.submit t(:regist), class: "btn btn-primary btn-sm"
+    = link_to t(:back), root_path, class:"btn btn-secondary btn-sm"
