--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,24 +12,26 @@
   %body
     %header.navbar.navbar-expand-sm.navbar-light.bg-light
       .container
-        = link_to "MiniBlog", root_path, class: "navbar-brand"
+        = link_to t(:title), root_path, class: "navbar-brand"
         %ui.navbar-nav
           - if user_signed_in?
             %li.nav-item
-              = link_to "All User Articles", root_path, class: "nav-link"
+              = link_to t(:all_user_articles), root_path, class: "nav-link"
             %li.nav-item
-              = link_to "Following User Articles", articles_following_path, class: "nav-link"
+              = link_to t(:following_user_articles), articles_following_path, class: "nav-link"
             %li.nav-item
-              = link_to "Create Article", new_article_path, class: "nav-link"
+              = link_to t(:create_article), new_article_path, class: "nav-link"
             %li.nav-item
-              = link_to "Edit User", edit_user_registration_path, class: "nav-link"
+              = link_to t(:edit_user), edit_user_registration_path, class: "nav-link"
             %li.nav-item
-              = link_to "Retirement", registration_path(:user), data: { confirm: "Are you sure?" }, method: :delete, class: "nav-link"          
+              = link_to t(:retirement), registration_path(:user), data: { confirm: "Are you sure?" }, method: :delete, class: "nav-link"          
             %li.nav-item
-              = link_to "Log out", destroy_user_session_path, class: "nav-link", method: :delete
+              = link_to t(:logout), destroy_user_session_path, class: "nav-link", method: :delete
           - else
             %li.nav-item
-              = link_to "Log in", new_user_session_path, class: "nav-link"
+              = link_to t(:sign_up), new_registration_path(:user), class: "nav-link"
+            %li.nav-item
+              = link_to t(:login), new_user_session_path, class: "nav-link"
     .container
       - if flash.notice
         .alert.alert-success
