--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -1,5 +1,5 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
+%h5
+  = t(:edit_user)
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = render "users/shared/error_messages", resource: resource
   .form-group
@@ -7,11 +7,10 @@
     = f.text_field :username, class: "form-control"
   .form-group
     = f.label :password
-    %i (leave blank if you don't want to change it)
+    = "(#{t(:edit_password2_message)})"
     - if @minimum_password_length
       %em
-        = @minimum_password_length
-        characters minimum
+        = "(#{t(:password_message, minimum_password_length: @minimum_password_length)})"
     = f.password_field :password, class: "form-control"
   .form-group
     = f.label :password_confirmation
@@ -24,8 +23,8 @@
     = f.text_field :blog_url, class: "form-control"
   .form-group
     = f.label :current_password
-    %i (we need your current password to confirm your changes)
+    = "(#{t(:edit_password_message)})"
     = f.password_field :current_password, class: "form-control"
   .form-group
-    = f.submit "Update", class: "btn btn-primary btn-sm"
-    = link_to "Back", root_path, class:"btn btn-secondary btn-sm"
+    = f.submit t(:update), class: "btn btn-primary btn-sm"
+    = link_to t(:back), root_path, class:"btn btn-secondary btn-sm"
