--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,4 +1,5 @@
-%h2 Sign up
+%h5 
+  = t(:sign_up) 
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = render "users/shared/error_messages", resource: resource
   .form-group
@@ -8,8 +9,7 @@
     = f.label :password
     - if @minimum_password_length
       %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
+        = "(#{t(:password_message, minimum_password_length: @minimum_password_length)})"
     = f.password_field :password, class: "form-control"
   .form-group
     = f.label :password_confirmation
@@ -21,5 +21,5 @@
     = f.label :blog_url
     = f.text_field :blog_url, class: "form-control"
   .form-group
-    = f.submit "Sign up", class: "btn btn-primary btn-sm"
+    = f.submit t(:sign_up), class: "btn btn-primary btn-sm"
 = render "users/shared/links"
