--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,3 +1,5 @@
-%h5 
-  = t(:time_line)
-= render :partial => "articles"
+.container
+  - if user_signed_in?
+    = render :partial => "new"
+.container
+  = render :partial => "articles"
