--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,12 +1,18 @@
-%h1.mt-3.mb-3= @user.username
 .row
   .col-8
     .card.mb-2
-      %h5.card-header Profile
+      .card-header
+        = User.human_attribute_name(:username)
+      .card-body
+        %p.card-text= @user.username
+    .card.mb-2
+      .card-header
+        = User.human_attribute_name(:profile)
       .card-body
         %p.card-text= @user.profile
     .card.mb-2
-      %h5.card-header Blog Url
+      .card-header
+        = User.human_attribute_name(:blog_url)
       .card-body
         = link_to @user.blog_url, class: "card-link"
   .col-4
