--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,9 +16,9 @@
         %ui.navbar-nav
           - if user_signed_in?
             %li.nav-item
-              = link_to t(:all_user_articles), root_path, class: "nav-link"
+              = link_to t(:all_user_posts), root_path, class: "nav-link"
             %li.nav-item
-              = link_to t(:following_user_articles), articles_following_path, class: "nav-link"
+              = link_to t(:following_user_posts), posts_following_path, class: "nav-link"
             %li.nav-item
               = link_to t(:edit_user), edit_user_registration_path, class: "nav-link"
             %li.nav-item
