--- a/app/views/posts/_new.haml
+++ b/app/views/posts/_new.haml
@@ -1,4 +1,4 @@
-= form_with(model: current_user.created_articles.build, local: false, class: "form-horizontal") do |f|
+= form_with(model: current_user.created_posts.build, local: false, class: "form-horizontal") do |f|
   #errors
   .row
     .col-4
