--- a/app/views/posts/following.haml
+++ b/app/views/posts/following.haml
@@ -1,4 +1,5 @@
 .container
-  - if @articles.count == 0 
+  - if @posts.count == 0 
     フォローしているユーザの投稿がありません
-  = render :partial => "articles"
+  - else
+    = render :partial => "posts"
