--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,4 +1,4 @@
-= form_with(model: @article, class: "form-horizontal") do |f|
+= form_with(model: @post, class: "form-horizontal") do |f|
   #errors
   .form-group
     = f.label :content
