--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,18 +16,18 @@
         %ui.navbar-nav
           - if user_signed_in?
             %li.nav-item
-              = link_to t(:all_user_posts), root_path, class: "nav-link"
+              = link_to t("posts.all"), root_path, class: "nav-link"
             %li.nav-item
-              = link_to t(:following_user_posts), posts_following_path, class: "nav-link"
+              = link_to t("posts.following"), posts_following_path, class: "nav-link"
             %li.nav-item
-              = link_to t(:edit_user), edit_user_registration_path, class: "nav-link"
+              = link_to t(:account), edit_user_registration_path, class: "nav-link"
             %li.nav-item
-              = link_to t(:logout), destroy_user_session_path, class: "nav-link", method: :delete
+              = link_to t(:sign_out), destroy_user_session_path, class: "nav-link", method: :delete
           - else
             %li.nav-item
               = link_to t(:sign_up), new_registration_path(:user), class: "nav-link"
             %li.nav-item
-              = link_to t(:login), new_user_session_path, class: "nav-link"
+              = link_to t(:sign_in), new_user_session_path, class: "nav-link"
     .container.py-3
       - if flash.notice
         .alert.alert-success
