--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -7,7 +7,7 @@
     = f.label :password
     - if @minimum_password_length
       %em
-        = "(#{t(:password_message, minimum_password_length: @minimum_password_length)})"
+        = "(#{t("users.registrations.password_length_message", minimum_password_length: @minimum_password_length)})"
     = f.password_field :password, class: "form-control"
   .form-group
     = f.label :password_confirmation
