--- a/app/views/users/shared/_links.html.haml
+++ b/app/views/users/shared/_links.html.haml
@@ -1,5 +1,5 @@
 - if controller_name != 'sessions'
-  = link_to t(:login), new_session_path(resource_name)
+  = link_to t(:sign_in), new_session_path(resource_name)
   %br/
 - if devise_mapping.registerable? && controller_name != 'registrations'
   = link_to t(:sign_up), new_registration_path(resource_name)
