--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -5,11 +5,11 @@
     = f.text_field :username, class: "form-control"
   .form-group
     = f.label :password
-    = t(".message.password")
-    - if @minimum_password_length
-      %em
-        = "(#{t("users.registrations.password_length_message", minimum_password_length: @minimum_password_length)})"
     = f.password_field :password, class: "form-control"
+    .form-text.small
+      = t(".message.password")
+      - if @minimum_password_length
+        = "(#{t("users.registrations.password_length_message", minimum_password_length: @minimum_password_length)})"
   .form-group
     = f.label :password_confirmation
     = f.password_field :password_confirmation, class: "form-control"
@@ -21,8 +21,9 @@
     = f.text_field :blog_url, class: "form-control"
   .form-group
     = f.label :current_password
-    = t(".message.current_password")
     = f.password_field :current_password, class: "form-control"
+    .form-text.small
+      = t(".message.current_password")
   .form-group
     = f.submit t(:update), class: "btn btn-primary btn-sm"
     = link_to t(:back), root_path, class:"btn btn-secondary btn-sm"
