--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,4 +1,4 @@
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+= form_for(resource, as: resource_name, url: new_user_registration_path) do |f|
   = render "users/shared/error_messages", resource: resource
   .form-group
     = f.label :username
