--- a/app/views/posts/_new.haml
+++ b/app/views/posts/_new.haml
@@ -3,7 +3,7 @@
   .row
     .col-4
       .form-group
-        = f.text_area :content, maxlength: "140", class: "form-control"
+        = f.text_area :content, class: "form-control"
     .col-2.px-0.align-self-end
       .form-group
         = f.submit t(:post), class: "btn btn-primary btn-sm"
