--- a/app/views/posts/_posts.haml
+++ b/app/views/posts/_posts.haml
@@ -10,4 +10,4 @@
         = link_to post.user.username, user_path(id: post.user.id)
   .row
     .col.ml-5.border-left.border-primary.text-break.text-monospace
-      = simple_format(h(post.content))
+      = simple_format(h(post.content), {}, wrapper_tag: "div")
