--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -18,20 +18,24 @@
   .col-4
     .card.mb-2
       .card-header{ style: "background-color: #e3f2fd;" }
-        - if user_signed_in? && current_user != @post.user
-          - unless current_user.liked_posts.include?(@post)
-            = form_with(model: current_user.likes.build) do |f|
-              = hidden_field_tag :post_id, @post.id
-              = f.button class: "btn btn-primary btn-sm" do
-                %i.bi.bi-heart= " いいね"
-                %span.position-absolute.top-0.start-100.translate-middle.badge.rounded-pill.bg-danger
-                  = @post.liked_users.count
-          - else
-            = form_with(model: current_user.likes.find_by(post_id: @post.id), method: :delete) do |f|
-              = f.button class: "btn btn-primary btn-sm" do
-                %i.bi.bi-heart-fill= " いいね"
-                %span.position-absolute.top-0.start-100.translate-middle.badge.rounded-pill.bg-danger
-                  = @post.liked_users.count
+        .row
+          .col-6{ style: "top: 3px;" }
+            = t(:like_user)
+          .col-4
+            - if user_signed_in? && current_user != @post.user
+              - unless current_user.liked_posts.include?(@post)
+                = form_with(model: current_user.likes.build) do |f|
+                  = hidden_field_tag :post_id, @post.id
+                  = f.button class: "btn btn-primary btn-sm" do
+                    %i.bi.bi-heart-fill= " #{t(:like)}"
+                    %span.position-absolute.top-0.start-100.translate-middle.badge.rounded-pill.bg-info
+                      = @post.liked_users.count
+              - else
+                = form_with(model: current_user.likes.find_by(post_id: @post.id), method: :delete) do |f|
+                  = f.button class: "btn btn-secondary btn-sm" do
+                    %i.bi.bi-heart-fill= " #{t(:like)}"
+                    %span.position-absolute.top-0.start-100.translate-middle.badge.rounded-pill.bg-info
+                      = @post.liked_users.count
       .card-body
         %ul.list-group.list-group-flush
           - @post.liked_users.each do |user|
