--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -13,6 +13,9 @@
     = f.label :password_confirmation
     = f.password_field :password_confirmation, class: "form-control"
   .form-group
+    = f.label :email
+    = f.text_field :email, class: "form-control"
+  .form-group
     = f.label :profile
     = f.text_area :profile, class: "form-control", row: 10
   .form-group
