mod mail format html and text

--- a/app/views/user_mailer/comment_notification.html.haml
+++ b/app/views/user_mailer/comment_notification.html.haml
@@ -1,4 +1,4 @@
-%p= "#{l @comment.post.created_at, format: :short}の投稿にコメントがつきました"
+%p= t("user_mailer.comment_notification.subject", created_at: l(@comment.post.created_at,  format: :short))
 
 = "------------------------------------------------------------"
 %p= "#{l @comment.created_at, format: :short} #{@comment.user.username}"
