--- a/app/views/user_mailer/comment_notification.text.haml
+++ b/app/views/user_mailer/comment_notification.text.haml
@@ -1,4 +1,4 @@
-= "#{l @comment.post.created_at, format: :short}の投稿にコメントがつきました"
+= t("user_mailer.comment_notification.subject", created_at: l(@comment.post.created_at,  format: :short))
 
 = "------------------------------------------------------------"
 = "#{l @comment.created_at, format: :short} #{@comment.user.username}"
