--- a/app/views/posts/_posts.haml
+++ b/app/views/posts/_posts.haml
@@ -4,7 +4,7 @@
       %i.far.fa-comment-dots{style: "color:Dodgerblue"}
       = link_to "#{l post.created_at, format: :short}", post_path(id: post.id)
       %i.bi.bi-heart-fill{style: "color:Dodgerblue"}
-      = post.liked_users.count
+      = post.liked_users.size
       - if user_signed_in? && current_user == post.user
         = post.user.username
       - else
