--- a/app/views/posts/_new.haml
+++ b/app/views/posts/_new.haml
@@ -5,8 +5,7 @@
       .mb-3.mb-2
         = f.text_area :content, class: "form-control"
       .mb-3.mb-0
-        .custom-file
-          = f.file_field :image, class: "custom-file-input", id: "inputFile"
-          %label.custom-file-label{"style": "font-size:10px", "for": "inputFile", "data-browse": "#{t(:ref)}"}= t(:image_choice)
+        .form-file.form-file-lg
+          = f.file_field :image, class: "form-control", id: "formFile"
       .mb-3.text-end
         = f.submit t(:post), class: "btn btn-primary btn-sm"
