--- a/app/views/posts/_posts.haml
+++ b/app/views/posts/_posts.haml
@@ -1,9 +1,9 @@
 - @posts.each do |post|
   .row
     .col.font-monospace
-      %i.far.fa-comment-dots{style: "color:Dodgerblue"}
+      %i.far.fa-comment-dots{style: "color:#2fa4e7"}
       = link_to "#{l post.created_at, format: :short}", post_path(id: post.id)
-      %i.fas.fa-heart{style: "color:Dodgerblue"}
+      %i.fas.fa-heart{style: "color:#2fa4e7"}
       = post.liked_users.size
       - if user_signed_in? && current_user == post.user
         = post.user.username
