--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,7 +1,7 @@
 .row
   .col-8
-    .card.mb-2
-      .card-header{ style: "background-color: #e3f2fd;" }
+    .card.border-primary.mb-2
+      %h6.card-header
         = t(:created_at)
       .card-body
         %p.card-text= l @post.created_at, format: :short
