--- a/app/views/posts/_posts.haml
+++ b/app/views/posts/_posts.haml
@@ -1,6 +1,6 @@
 - @posts.each do |post|
   .row
-    .col.font-monospace.text-primary
+    .col.text-primary
       %i.far.fa-comment-dots
       = link_to "#{l post.created_at, format: :short}", post_path(id: post.id)
       %i.fas.fa-heart
@@ -10,6 +10,6 @@
       - else
         = link_to post.user.username, user_path(id: post.user.id)
   .row
-    .col.ms-5.border-start.border-primary.text-break.font-monospace
+    .col.ms-5.border-start.border-primary.text-break
       = simple_format(h(post.content), {}, wrapper_tag: "div")
       = link_to image_tag(post.image.thumb.url, class: "rounded"), post.image.url, target: "_blank" if post.image? 
