--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -39,7 +39,8 @@
               - else
                 = form_with(model: current_user.likes.find_by(post_id: @post.id), method: :delete) do |f|
                   = f.button class: "btn btn-secondary btn-sm position-relative" do
-                    %i.fas.fa-heart= " #{t(:like)}"
+                    %i.fas.fa-heart
+                    = " #{t(:like)}"
                     %span.position-absolute.top-0.start-100.translate-middle.badge.rounded-pill.bg-info
                       = @post.liked_users.count
       .card-body
